// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="sc-htpNat hUeRGA"
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  className="sc-htpNat izIXMc"
  disabled={true}
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
<a
  className="sc-bwzfXH cMAwix"
  href="https://ivesvh.com"
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
<button
  className="sc-htpNat hUeRGA"
  onClick={[Function]}
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
<button
  className="sc-htpNat kgEmQI"
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
<a
  className="sc-bdVaJa kfQsdG"
  href="https://ivesvh.com"
  onClick={[Function]}
>
  Test
</a>
`;
